# photon_weave

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pull_request_template.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: draft-pdf.yml  joss-draft.yml  pypi.yaml  run-tests.yml  tests.yml
JOSS2024/: paper.bib  paper.md
benchmarks/: README.md  benchmark.py
benchmarks/lossy_circuit/: README.md  array_memory_usage_tracker.py  lc_photon_weave.py  lc_qiskit.py  lc_qutip.py  lossy_circuit.py
benchmarks/state_management/: state_management_benchmark.py  state_management_photon_weave.py  state_management_qiskit.py  state_management_qutip.py
docs/: benchmarks.rst  conf.py  index.rst  installation.rst  intro.rst  modules.rst  photon_weave.constants.rst  photon_weave.extra.rst  photon_weave.operation.helpers.rst  photon_weave.operation.rst  photon_weave.rst  photon_weave.state.rst  photon_weave.state.utils.rst  requirements.txt  usage.rst
docs/examples/: index.rst  jaynes_cummings_model.rst  super_dense_coding.rst  time_bin_encoding.rst
examples/: README.md  jaynes_cummings_model.py  mach_zehnder_interferometer.py  polarizing_beam_splitter.py  super_dense_coding.py  time_bin_encoding.py  time_bin_qubit.py
examples/interoperable_devices/: __init__.py  dense_decoder.py  dense_encoder.py  entangled_photon_source.py  envelope_buffer.py
paper/: paper.bib  paper.md
photon_weave/: photon_weave.py
photon_weave/_math/: __init__.py  ops.py
photon_weave/constants/: __init__.py
photon_weave/extra/: __init__.py  einsum_constructor.py  expression_interpreter.py
photon_weave/operation/: __init__.py  composite_operation.py  custom_state_operation.py  fock_operation.py  generic_operation.py  operation.py  polarization_operation.py  polarization_operations.py
photon_weave/state/: base_state.py  composite_envelope.py  composite_state.py  custom_state.py  envelope.py  exceptions.py  expansion_levels.py  fock.py  polarization.py
tests/extra/: test_expression_interpreter.py
(+24 files in other folders)
