[tool.poetry]
name = "photon_weave"
version = "0.1.0"
description = "A quantum optics simulator for modeling and analysis of quantum systems."
authors = ["Simon Sekavčnik, Kareem H. El-Safty, Janis Nötzel"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tqsd/photon_weave"
repository = "https://github.com/tqsd/photon_weave"
keywords = ["quantum optics", "simulation", "quantum mechanics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">= 3.10"
jax = "*"
jaxlib = "*"
# Add other dependencies as required

[tool.poetry.dev-dependencies]
pytest = "^8.2"
sphinx = "^7.4"
sphinx-rtd-theme = "^0.5"
# Add other development dependencies as required

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
